k8s-yaml/mongo-express.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-express
  namespace: default
  labels:
    app: mongo-express # Label to identify resources related to this Deployment
spec:
  replicas: 1 # Number of replica pods to maintain
  selector:
    matchLabels:
      app: mongo-express # Selector label for the pods
  template:
    metadata:
      labels:
        app: mongo-express # Label for pods created by this Deployment
    spec:
      containers:
        - name: mongo-express
          image: mongo-express # Container image to use
          ports:
            - containerPort: 8081 # Port to expose on the container
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-express-service # Unique identifier for the Service
spec:
  selector:
    app: mongo-express # Selector label for pods to expose
  type: LoadBalancer # Type of service
  ports:
    - protocol: TCP
      port: 8081 # Service port
      targetPort: 8081 # Target port on pods
      nodePort: 30000 # Node port (for LoadBalancer type)
