k8s-yaml/mongo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-deployment # Unique identifier for the Deployment
  namespace: default
  labels:
    app: mongodb # Label to identify resources related to this Deployment
spec:
  replicas: 1 # Number of replica pods to maintain
  selector:
    matchLabels:
      app: mongodb # Selector label for the pods
  template:
    metadata:
      labels:
        app: mongodb # Label for pods created by this Deployment
    spec:
      containers:
        - name: mongodb
          image: mongo # Container image to use
          ports:
            - containerPort: 27017 # Port to expose on the container
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service # Unique identifier for the Service
spec:
  selector:
    app: mongodb # Selector label for pods to expose
  ports:
    - protocol: TCP
      port: 27017 # Service port
      targetPort: 27017 # Target port on pods
